--- a/client/templates/home/clearance/student/tabs/tabsOne.html
+++ b/client/templates/home/clearance/student/tabs/tabsOne.html
@@ -1,82 +1,8 @@
-<template name="studentProfile">
+<template name="tabsOne">
+  {{#ionView}}
+    {{> _tabsHeader}}
 
-
-      <!-- {{#contentFor "headerTitle"}}
-        <h1 class="title">Student List</h1>
-      {{/contentFor}}
-
-      {{#contentFor "headerButtonRight"}}
-
-  
-      <a href="/SSCsearch" class="button button-clear icon ion-ios-search-strong placeholder-icon">
-    
-      </a>
-  {{/contentFor}} -->
-
-
-
- {{#contentFor "headerButtonLeft"}}
-      {{>ionNavBackButton path="index"}}
-    {{/contentFor}}
-  {{#contentFor "headerTitle"}}
-    <h1 class="title">Student Clearance</h1>
-  {{/contentFor}}
-
-  
-
-
-
-  <!-- {{#contentFor "headerButtonRight"}}
-    <button class="button button-clear" data-ion-popover="_myPopover">
-      {{#if isAndroid}}
-        {{> ionIcon icon='android-more-vertical'}}
-      {{else}}
-        {{> ionIcon icon='more'}}
-      {{/if}}
-    </button>
-  {{/contentFor}} -->
-
-
-
-
-	
-	{{#ionView}}
-        {{#ionContent}}
-
-        <!-- <button type="button" class="btn btn-primary" id="btnLogout">Logout</button>
-        <a href="{{pathFor 'addStudent'}}" class="btn btn-default" id="btnAvatar">Register</a> -->
-        <!-- <a href="{{pathFor 'editAccount'}}" class="btn btn-default" id="btnAvatar">Edit Account</a> -->
-
-        <!-- <form class="form-inline">
-          <input type="text" class="form-control txtName" placeholder="Username" readonly="true" value="{{currentUser.username}}" />
-          <input type="text" class="form-control txtText" placeholder="Type a message"/>
-      </form> -->
-	
-
-		<!-- <div class="list">
-
-		{{#each studentList}}
-
-      <a href="#" class="item">
-     
-      <h2><b>{{studentID}}</b> : {{studentLastname}}, {{studentFirstname}} : {{course}} : {{startDate}} : {{schoolYear}} : {{semester}} : <button class="btn btn-danger btn-smalll btnStatus">{{SSCstatus}}</button>  <button class="btn btn-danger btn-smalll btnDelete" data-action="showConfirm">&times;</button>
-        
-      </h2>
-   
-      </a>
-    
-	{{/each}}
-
-        
-    </div> -->
-
-
- 
-
-
-
-
-
+    {{#ionContent class="padding"}}
 
       <div class="list">
       {{#each userData}}
@@ -648,24 +574,13 @@
     
 
     {{/if}}
-
-
-    
-
     {{/each}}
 </div>
 
-      
-      
-      
-    
 
 
     {{/ionContent}}
-      {{/ionView}}
 
-
-    
-
-
+    {{> _tabs}}
+  {{/ionView}}
 </template>
